Fixed background on mobile

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1832,9 +1832,14 @@ body {
   background-image: url("../../../assets/images/main-image.jpg");
 }
 .cid-s7tw5Ks0Bw2 {
-  background-image: url("../../../assets/images/bg-misison.jpg");
+  background: rgb(43,53,134);
+/*  background: linear-gradient(180deg, rgba(43,53,134,1) 0%, rgba(42,60,152,1) 35%, rgba(99,135,204,1) 100%);*/
 }
-
+@media (min-width: 600px) {
+  .cid-s7tw5Ks0Bw2 {
+    background-image: url("../../../assets/images/bg-misison.jpg");
+  }
+}
 .cid-s7tw5Ks0Bw3 {
   background-image: url("../../../assets/images/bg-mission-bottom.jpg");
 }
@@ -1893,8 +1898,7 @@ body {
   text-align: left;
 }
 .cid-s7S6zBsbVi {
-  /*padding-top: 60px;
-  padding-bottom: 60px;*/
+
   background-color: #000;
 }
 .cid-s7S6zBsbVi .media-container-row {
@@ -1918,6 +1922,14 @@ body {
 .cid-s7S6zBsbVi .mbr-text {
   color: #fff;
   text-align: left;
+
+}
+
+@media (min-width: 992px) {
+
+  .cid-s7S6zBsbVi .mbr-text {
+    max-width: 75%;
+  }
 }
 .cid-s7jGLII6OX {
   padding-top: 90px;
